objects/JiraTestObj1__c.object
<CustomObject>
    <fields>
        <fullName>JiraRameshtest1__c</fullName>
        <label>JiraRameshtest1</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>NiruField1__c</fullName>
        <description>Test</description>
        <label>NiruField1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>testjira1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Build</label>
        <referenceTo>agf__ADM_Build__c</referenceTo>
        <relationshipLabel>JiraTestObj1s</relationshipLabel>
        <relationshipName>JiraTestObj1s</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>